--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,12 +130,16 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"/>
 
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="90e83e6f6353d1c449a0b3e3e30dff28fe01a3ae"/>
 
         <activity
             android:name=".MainContent.Settings.AttributionsActivity"/>
+
+        <activity
+            android:name=".MainContent.PostCreateActivity"/>
 
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
