--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
-    compile 'com.github.hiteshsondhi88.libffmpeg:FFmpegAndroid:0.2.5'
+//    compile 'com.github.hiteshsondhi88.libffmpeg:FFmpegAndroid:0.2.5'
+    compile 'com.writingminds:FFmpegAndroid:0.3.2'
     compile 'commons-io:commons-io:2.4'
     compile 'com.lyft:scissors:1.0.3'
     compile 'io.reactivex:rxandroid:1.1.0'
