--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -46,7 +47,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
-    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -64,7 +64,12 @@ dependencies {
     compile 'com.lyft:scissors:1.0.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.google.android.gms:play-services-gcm:9.2.0'
+
+    compile 'com.google.android.gms:play-services-analytics:9.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
+
+
 
     //new
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.2'
