--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,12 +64,11 @@ dependencies {
     compile 'com.lyft:scissors:1.0.3'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
-    compile 'com.google.android.gms:play-services-gcm:9.2.0'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
 
-    compile 'com.google.android.gms:play-services-analytics:9.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 
-
+    compile 'com.appsflyer:af-android-sdk:4+@aar'
 
     //new
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.2'
