--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,6 +168,7 @@
 
         <activity android:name=".MainContent.CreateContent.Gallery.GalleryActivity"
                   android:screenOrientation="portrait"
+                  android:windowSoftInputMode="adjustPan"
                   android:theme="@style/AppTheme.FullScreen"/>
 
         <service
