--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-feature android:name="android.hardware.location.gps"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -168,8 +170,8 @@
 
         <activity android:name=".MainContent.CreateContent.Gallery.GalleryActivity"
                   android:screenOrientation="portrait"
-                  android:windowSoftInputMode="adjustPan"
-                  android:theme="@style/AppTheme.FullScreen"/>
+                  android:theme="@style/AppTheme.FullScreen"
+                  android:windowSoftInputMode="adjustPan"/>
 
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
