--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -173,6 +173,9 @@
                   android:theme="@style/AppTheme.FullScreen"
                   android:windowSoftInputMode="adjustPan"/>
 
+        <activity android:name=".MainContent.Settings.BlockedUsersActivity"
+            android:screenOrientation="portrait"/>
+
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
             android:process=":taptupload"/>
