--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -178,9 +178,15 @@
         <activity
             android:name=".MainContent.Settings.DeactivateAccountActivity"
             android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainContent.Settings.ManageAccountActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name=".MainContent.Settings.ManageAccountActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MainContent.Settings.ChangePasswordActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+        />
 
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
@@ -189,7 +195,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
-
 
     </application>
 
