--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ android {
                     'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 
@@ -58,24 +62,19 @@ dependencies {
     }
     compile 'com.linkedin.android.spyglass:spyglass:1.3.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile "com.daimajia.swipelayout:library:1.2.0@aar"
-//    compile 'com.github.hiteshsondhi88.libffmpeg:FFmpegAndroid:0.2.5'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+    //    compile 'com.github.hiteshsondhi88.libffmpeg:FFmpegAndroid:0.2.5'
     compile 'com.writingminds:FFmpegAndroid:0.3.2'
     compile 'commons-io:commons-io:2.4'
     compile 'com.lyft:scissors:1.1.1'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'com.google.android.gms:play-services-gcm:9.4.0'
-
     compile 'com.getbase:floatingactionbutton:1.10.1'
-
     compile 'com.appsflyer:af-android-sdk:4+@aar'
-
     compile 'com.android.support:multidex:1.0.1'
-
     //new
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.2.2'
-
+    compile 'org.mongodb:mongo-java-driver:3.2.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
