--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -189,6 +189,12 @@
             android:windowSoftInputMode="adjustResize"
         />
 
+        <activity
+            android:name=".MainContent.Settings.FeedbackActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+            />
+
         <service
             android:name=".MainContent.Uploading.UploadIntentService"
             android:process=":taptupload" />
