--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile('io.socket:socket.io-client:0.8.2') {
         exclude group: 'org.json', module: 'json'
     }
+
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
@@ -75,6 +76,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     //new
     compile 'org.mongodb:mongo-java-driver:3.2.2'
+    compile 'com.github.lzyzsd:CircleProgress:v1.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
