--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -178,22 +178,18 @@
         <activity
             android:name=".MainContent.Settings.DeactivateAccountActivity"
             android:screenOrientation="portrait" />
-            android:screenOrientation="portrait"/>
+        android:screenOrientation="portrait"/>
         <activity
             android:name=".MainContent.Settings.ManageAccountActivity"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainContent.Settings.ChangePasswordActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-        />
-
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".MainContent.Settings.FeedbackActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".MainContent.SendTo.SendToActivity" />
 
         <service
@@ -202,8 +198,11 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version" />
 
+        <service
+            android:name=".MainContent.DiscoverFragment.ShareService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
