--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     //new
     compile 'org.mongodb:mongo-java-driver:3.2.2'
     compile 'com.github.lzyzsd:CircleProgress:v1.2.0'
+    compile 'com.google.android.exoplayer:exoplayer:r2.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
